fix center align

--- a/css/style2.css
+++ b/css/style2.css
@@ -6,6 +6,7 @@
     height: 38px;
     background-color: #f1cd6f;
     margin-top: -10px;
+    margin-left: -10px;
    
 }
 
@@ -168,7 +169,8 @@
     height: auto;
     background: linear-gradient(90deg, rgba(214, 214, 214, 0.57) 1.6%, rgba(170, 170, 170, 0.15) 13.43%, rgba(154, 154, 154, 0.3) 83.04%, rgba(156, 156, 156, 0.58) 95.79%);
     border-radius: 50px;
-    margin: 209px 269px;
+    margin: 0 auto;
+    /*margin: 209px 269px;*/
 }
 
 .quote{
